--- a/proj42/lib/proj42_web/templates/layout/app.html.eex
+++ b/proj42/lib/proj42_web/templates/layout/app.html.eex
@@ -1,30 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Proj42 · Phoenix Framework</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
-  </head>
-  <body>
-    <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
-    </header>
-    <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= render @view_module, @view_template, assigns %>
-    </main>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
-  </body>
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+</head>
+<body>
+
+  <nav class="navbar navbar-expand-sm">
+    <a class="navbar-brand" href="#">
+      <img src="<%= Routes.static_path(@conn, "/images/bitter.jpg") %>" alt="logo" style="width:75px;height:75px;border-radius:50%;border:2px dashed white;"/>
+    </a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item" style="margin-right:25px;">
+        <h2>Twitter, but Better</h2>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Post Tweet</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Followers (103)</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Following (108)</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Login -></a>
+      </li>
+    </ul>
+  </nav>
+
+<div class="jumbotron text-center">
+  <h1>Welcome to Twitter, but Better</h1>
+  <img src="<%= Routes.static_path(@conn, "/images/bitter.jpg") %>" alt="logo" style="width:300px;height:300px;border-radius:50%;border:2px dashed black;"/>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <h3>Live Feed</h3>
+      <ul>
+        <li>
+          <p>If you were cool and had friends, you would see stuff about them here...</p>
+        </li>
+        <li>
+          <p>So instead this is as empty as your bank account...</p>
+        </li>
+      </ul>
+    </div>
+    <div class="col-sm-4" style="border-left: 1px solid #eee;">
+      <h3>Find People / Them Stats</h3>
+      <u>Search for someone: </u> <br><br>
+      <form action="/action_page.php">
+        <div class="form-group">
+          <input type="text" class="form-control" id="search" placeholder="Enter username" name="search">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      <hr>
+      <u>Followers: </u>103
+      <p>These people will see your posts/reposts in their feeds.</p>
+      <u>Following: </u>108
+      <p>You will see posts/reposts by these people in your feed.</p>
+    </div>
+  </div>
+</div>
+
+</body>
 </html>
