--- a/proj42/lib/proj42_web/templates/page/index.html.eex
+++ b/proj42/lib/proj42_web/templates/page/index.html.eex
@@ -1,40 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p>
-</div>
-
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-sm-8">
+      <h3>Live Feed</h3>
+      <ul>
+        <li>
+          <p>If you were cool and had friends, you would see stuff about them here...</p>
+        </li>
+        <li>
+          <p>So instead this is as empty as your bank account...</p>
+        </li>
+      </ul>
     </div>
-    <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-sm-4" style="border-left: 1px solid #eee;">
+      <h3>Find People / Them Stats</h3>
+      <u>Search for someone: </u> <br><br>
+      <form action="/action_page.php">
+        <div class="form-group">
+          <input type="text" class="form-control" id="search" placeholder="Enter username" name="search">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      <hr>
+      <u>Followers: </u>103
+      <p>These people will see your posts/reposts in their feeds.</p>
+      <u>Following: </u>108
+      <p>You will see posts/reposts by these people in your feed.</p>
     </div>
   </div>
 </div>
-
-</body>
-</html>
