--- a/proj42/lib/proj42_web/templates/tweet/publish.html.eex
+++ b/proj42/lib/proj42_web/templates/tweet/publish.html.eex
@@ -24,7 +24,7 @@
         <h2>Twitter, but Better</h2>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:4000/publish_tweet">Post Tweet</a>
+        <a class="nav-link" href="#">Post Tweet</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Followers (103)</a>
