--- a/proj42/lib/proj42_web/templates/layout/app.html.eex
+++ b/proj42/lib/proj42_web/templates/layout/app.html.eex
@@ -38,41 +38,7 @@
     </ul>
   </nav>
 
-<div class="jumbotron text-center">
-  <h1>Welcome to Twitter, but Better</h1>
-  <img src="<%= Routes.static_path(@conn, "/images/bitter.jpg") %>" alt="logo" style="width:300px;height:300px;border-radius:50%;border:2px dashed black;"/>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8">
-      <h3>Live Feed</h3>
-      <ul>
-        <li>
-          <p>If you were cool and had friends, you would see stuff about them here...</p>
-        </li>
-        <li>
-          <p>So instead this is as empty as your bank account...</p>
-        </li>
-      </ul>
-    </div>
-    <div class="col-sm-4" style="border-left: 1px solid #eee;">
-      <h3>Find People / Them Stats</h3>
-      <u>Search for someone: </u> <br><br>
-      <form action="/action_page.php">
-        <div class="form-group">
-          <input type="text" class="form-control" id="search" placeholder="Enter username" name="search">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-      <hr>
-      <u>Followers: </u>103
-      <p>These people will see your posts/reposts in their feeds.</p>
-      <u>Following: </u>108
-      <p>You will see posts/reposts by these people in your feed.</p>
-    </div>
-  </div>
-</div>
+<%= render @view_module, @view_template, assigns %>
 
 </body>
 </html>
