--- a/proj42/lib/proj42_web/templates/layout/app.html.eex
+++ b/proj42/lib/proj42_web/templates/layout/app.html.eex
@@ -24,16 +24,13 @@
         <h2>Twitter, but Better</h2>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://localhost:4000/publish_tweet">Post Tweet</a>
+        <a class="nav-link" href="http://localhost:4000/tweet">Post Tweet</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Followers (103)</a>
+        <a class="nav-link" href="http://localhost:4000/users">Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Following (108)</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Login -></a>
+        <a class="nav-link" href="http://localhost:4000/login">Login -></a>
       </li>
     </ul>
   </nav>
