--- a/proj42/lib/proj42_web/templates/layout/app.html.eex
+++ b/proj42/lib/proj42_web/templates/layout/app.html.eex
@@ -14,7 +14,7 @@
 <body>
 
   <nav class="navbar navbar-expand-sm">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="http://localhost:4000">
       <img src="<%= Routes.static_path(@conn, "/images/bitter.jpg") %>" alt="logo" style="width:75px;height:75px;border-radius:50%;border:2px dashed white;"/>
     </a>
 
@@ -22,6 +22,9 @@
     <ul class="navbar-nav">
       <li class="nav-item" style="margin-right:25px;">
         <h2>Twitter, but Better</h2>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:4000">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="http://localhost:4000/tweet">Post Tweet</a>
